cluster/deprecated/proxitok/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxitok-route
  namespace: proxitok
spec:
  parentRefs:
    - name: gateway-external # must match Gateway's metadata.name
      namespace: gateway
      sectionName: https # must match Gateway's listeners[].name
  hostnames:
    - "proxitok.ejsadiarin.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: proxitok-web
          port: 8080
